--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,10 +6,10 @@
     "start": "npm run dev"
   },
   "dependencies": {
-    "@types/react": "18.0.28",
     "bootstrap": "5.2.3",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
+    "font-awesome": "^4.7.0",
     "i18next": "^23.7.6",
     "next": "^14.2.6",
     "next-i18next": "^15.0.0",
@@ -21,11 +21,12 @@
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
-    "@types/node": "18.15.0",
+    "@types/node": "^18.15.0",
+    "@types/react": "^18.3.12",
     "@types/react-datepicker": "^4.15.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
-    "typescript": "4.9.5"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^4.9.5"
   }
 }
