--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,4 +1,12 @@
+# replace USER, PASSWORD, HOST (and DB name) with your Postgres values
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:5432/evently?schema=public"
+
+# app port (change if taken)
 APP_PORT=3000
+
+# random secret for JWT
 JWT_SECRET="replace_with_any_random_string"
+
+# JWT lifetime in hours
 JWT_EXPIRES_HOURS=8
+
